--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.8'
 
 services:
   whisper-api:
+    ports:
+      - "8001:8000"
     build:
       context: .
       dockerfile: Dockerfile 
